--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "axios": "0.17.1",
     "element-ui": "2.0.8",
     "js-cookie": "2.2.0",
+    "net": "^1.0.2",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
+    "stompjs": "^2.3.3",
     "vue": "2.5.10",
     "vue-quill-editor": "^3.0.6",
     "vue-quill-editor-upload": "^1.1.0",
