--- a/package.json
+++ b/package.json
@@ -16,14 +16,18 @@
     "axios": "0.17.1",
     "element-ui": "2.0.8",
     "js-cookie": "2.2.0",
+    "less": "^4.0.0",
+    "less-loader": "^7.2.1",
     "net": "^1.0.2",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
+    "socket.io-client": "^3.0.4",
     "stompjs": "^2.3.3",
     "vue": "2.5.10",
     "vue-quill-editor": "^3.0.6",
     "vue-quill-editor-upload": "^1.1.0",
-    "vue-router": "3.0.1",
+    "vue-router": "^3.0.1",
+    "vue-socket.io": "^2.1.1",
     "vuex": "3.0.1"
   },
   "devDependencies": {
@@ -39,7 +43,7 @@
     "babel-preset-stage-2": "6.24.1",
     "chalk": "2.3.0",
     "copy-webpack-plugin": "4.2.3",
-    "css-loader": "0.28.7",
+    "css-loader": "^0.28.7",
     "eslint": "4.13.1",
     "eslint-friendly-formatter": "3.0.0",
     "eslint-loader": "1.9.0",
@@ -64,7 +68,7 @@
     "uglifyjs-webpack-plugin": "1.1.3",
     "url-loader": "0.6.2",
     "vue-loader": "13.5.0",
-    "vue-style-loader": "3.0.3",
+    "vue-style-loader": "^3.0.3",
     "vue-template-compiler": "2.5.10",
     "webpack": "3.10.0",
     "webpack-bundle-analyzer": "2.9.1",
